add link and pic

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
             <li>sortiertes Listenelement</li>
             <li>sortiertes Listenelement</li>
         </ol>
+
+        <a href="xxx.html">leerer Link </a>
+        <img src="penguin.png" alt="Pinguin">
     </main>
     <footer>
         <p>footer</p>
+
     </footer>
     
 </body>
