--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p>Dies ist ein Paragraph. </p>
 
         <ul>
-            <li>unsortiertes Listenelement</li>
-            <li>unsortiertes Listenelement</li>
+            <li>unsortiertes <em>Listenelement</em></li>
+            <li>unsortiertes <strong>Listenelement</strong></li>
             <li>unsortiertes Listenelement</li>
         </ul>
 
@@ -25,8 +25,26 @@
             <li>sortiertes Listenelement</li>
         </ol>
 
-        <a href="xxx.html">leerer Link </a>
-        <img src="penguin.png" alt="Pinguin">
+        <a href="xxx.html">leerer Link </a> <br>
+        <img src="penguin.png" alt="Pinguin"> <br>
+
+        <table>
+            <tr>
+                <th>Spalte 1</th>
+                <th>Spalte 2</th>
+                <th>Spalte 3</th>
+            </tr>
+            <tr>
+                <td>Zeile 1</td>
+                <td>Zeile 2</td>
+                <td>Zeile 3</td>
+            </tr>
+            <tr>
+                <td>Zeile 1</td>
+                <td>Zeile 2</td>
+                <td>Zeile 3</td>
+            </tr>
+        </table>
     </main>
     <footer>
         <p>footer</p>
