--- a/index.html
+++ b/index.html
@@ -5,51 +5,15 @@
     <title>HTML</title>
 </head>
 <body>
-    <header>
-        <h1>HTML </h1>
-    </header>
-    <main>
-        <h2>Dies ist eine h2 Überschrift</h2>
-        <h3>Es gibt h1-h6 Überschriften</h3>
-        <p>Dies ist ein Paragraph. </p>
+    <h1>HTML Playground</h1>
+  <nav>
+      <ul>
+          <li>GIT</li>
+          <li>HTML</li>
+          <li>SHELL</li>
+      </ul>
+  </nav>
 
-        <ul>
-            <li>unsortiertes <em>Listenelement</em></li>
-            <li>unsortiertes <strong>Listenelement</strong></li>
-            <li>unsortiertes Listenelement</li>
-        </ul>
-
-        <ol>
-            <li>sortiertes Listenelement</li>
-            <li>sortiertes Listenelement</li>
-            <li>sortiertes Listenelement</li>
-        </ol>
-
-        <a href="xxx.html">leerer Link </a> <br>
-        <img src="penguin.png" alt="Pinguin"> <br>
-
-        <table>
-            <tr>
-                <th>Spalte 1</th>
-                <th>Spalte 2</th>
-                <th>Spalte 3</th>
-            </tr>
-            <tr>
-                <td>Zeile 1</td>
-                <td>Zeile 2</td>
-                <td>Zeile 3</td>
-            </tr>
-            <tr>
-                <td>Zeile 1</td>
-                <td>Zeile 2</td>
-                <td>Zeile 3</td>
-            </tr>
-        </table>
-    </main>
-    <footer>
-        <p>footer</p>
-
-    </footer>
     
 </body>
 </html>
