--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-    <h1>HTML Playground</h1>
+    <h1>HTML hallo</h1>
   <nav>
       <ul>
-          <li>GIT</li>
-          <li>HTML</li>
+          <li>GIT &#128039;</li>
+          <li>HTML 🥳</li>
           <li>SHELL</li>
+          <details>
+              <summary>Details</summary>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+          </details>
       </ul>
   </nav>
 
