--- a/index.html
+++ b/index.html
@@ -1,70 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>HTML</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="favicon.png" />
+  </head>
+  <body>
     <h1>HTML hallo</h1>
-  <nav>
+    <nav>
       <ul>
-          <li><a href="#git">GIT &#128039;</a></li>
-          <li><a href="#html">HTML 🥳</a></li>
-          <li><a href="#shell">SHELL</a></li>
-          <details>
-              <summary>Details</summary>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-          </details>
+        <li><a href="#git">GIT &#128039;</a></li>
+        <li><a href="#html">HTML 🥳</a></li>
+        <li><a href="#shell">SHELL</a></li>
+        <details>
+          <summary>Details</summary>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et
+        </details>
       </ul>
-  </nav>
-<section>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam aut.</p>
-</section>
-  <section id="git">
+    </nav>
+    <section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
+        reiciendis sit maiores magni tempora quia quos ab. Explicabo, tempora
+        excepturi! Delectus iste libero odit nobis voluptatibus. Fugiat, magnam
+        aut.
+      </p>
+    </section>
+    <section id="git">
       <h2>GIT</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-  </section>
-    
-  <section id="html">
-    <h2>HTML</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-</section>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+    </section>
 
-<section id="shell">
-    <h2>SHELL</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo aspernatur laboriosam.</p>
-</section>
+    <section id="html">
+      <h2>HTML</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+    </section>
 
-<section>
-    <p><a href="#">nach oben</a></p>
-</section>
-</body>
+    <section id="shell">
+      <h2>SHELL</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati sed
+        voluptatibus id quaerat repellendus maxime dolore dolor quisquam commodi
+        doloremque, eius corporis! Iusto velit deleniti accusantium dicta quo
+        aspernatur laboriosam.
+      </p>
+    </section>
+
+    <section>
+      <p><a href="#">nach oben</a></p>
+    </section>
+  </body>
 </html>
