--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
   <body>
     <h1>HTML hallo</h1>
     <nav>
-      <ul>
-        <li><a href="#git">GIT &#128039;</a></li>
-        <li><a href="#html">HTML 🥳</a></li>
-        <li><a href="#shell">SHELL</a></li>
-        <details>
-          <summary>Details</summary>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et
-        </details>
+      <ul class="nav nav-tabs justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="#git">GIT &#128039;</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#html">HTML 🥳</a></li>
+        <li class="nav-item"><a class="nav-link" href="#shell">SHELL</a></li>
       </ul>
     </nav>
+
+    <details>
+      <summary>Details</summary>
+      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+      eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
+      voluptua. At vero eos et accusam et
+    </details>
     <section>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
