--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
   </head>
   <body>
-    <h1>HTML hallo</h1>
+    <h1>HTML playground</h1>
     <nav>
       <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item">
@@ -34,6 +34,19 @@
       eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
       voluptua. At vero eos et accusam et
     </details>
+
+    <div class="card" style="width: 18rem">
+      <img src="penguin.png" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Penguin</h5>
+        <p class="card-text">
+          Although almost all penguin species are native to the Southern
+          Hemisphere, they are not found only in cold climates, such as
+          Antarctica.
+        </p>
+        <a href="#shell" class="btn btn-primary">Find out more</a>
+      </div>
+    </div>
     <section>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic totam
