--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <ul class="nav nav-tabs justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="#git">GIT &#128039;</a>
+          <a class="nav-link active" href="#git">GIT &#128039;</a>
         </li>
         <li class="nav-item"><a class="nav-link" href="#html">HTML 🥳</a></li>
         <li class="nav-item"><a class="nav-link" href="#shell">SHELL</a></li>
@@ -36,7 +36,7 @@
     </details>
 
     <div class="card" style="width: 18rem">
-      <img src="penguin.png" class="card-img-top" alt="..." />
+      <img src="penguin.png" class="card-img-top" alt="Penguin" />
       <div class="card-body">
         <h5 class="card-title">Penguin</h5>
         <p class="card-text">
@@ -44,7 +44,7 @@
           Hemisphere, they are not found only in cold climates, such as
           Antarctica.
         </p>
-        <a href="#shell" class="btn btn-primary">Find out more</a>
+        <a href="#git" class="btn btn-primary">Find out more</a>
       </div>
     </div>
     <section>
